# KalmanFilter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Filter/: CMakeLists.txt
Filter/include/Filter/: Filter.h  Filter.hpp  ekf.h
Filter/src/: Filter.cpp  ekf.cpp
KFExceptions/: CMakeLists.txt
KFExceptions/include/KFExceptions/: KFExceptions.hpp
Utils/: CMakeLists.txt
Utils/include/Utils/: random.hpp
example/: CMakeLists.txt
example/filter_demo/: CMakeLists.txt
example/filter_demo/include/filter_demo/: ekf_demo.h
example/filter_demo/src/: ekf_demo.cpp  filter_test.cpp  measure.txt
example/matrix_demo/: CMakeLists.txt
example/matrix_demo/src/: matrix_test.cpp
example/utils_demo/: CMakeLists.txt
example/utils_demo/src/: utils_test.cpp
matrix/: CMakeLists.txt
matrix/include/matrix/: IOFormat.h  IOFormat.hpp  Matrix.hpp
matrix/src/: IOFormat.cpp
